# NUAA-compiling-principle

./: .~lock.编译原理实验安排.doc#  README.md  编译原理实验安排.doc
Compilers3/: Grammar.cpp  Grammar.dsp  Grammar.dsw  Grammar.ncb  Grammar.opt  Grammar.plg
Compilers3/Debug/: Grammar.pch  Grammar.sbr  vc60.idb
ccalc/: ccalc  lex.c  parse.c
example/: exa.y  exa1.l  exa2.l  exa2.y  exa3.l  example2_21.l  example2_23.l  y.l
example/CMMInterpreter-master/: interpreter
example/calc2/: calc.l  calc.tab.c  calc.tab.h  calc.y  lex.yy.c
example/exa2/: exa2  exa2.l  exa2.y  lex.yy.c
example/y/: lex.yy.c  y.tab.c  y.tab.h  y.y
github_demos/C-to-3AddressCode-Compiler-master/: qc
github_demos/CMM-Compilers-master/: lex.yy.c  parser
github_demos/bison-flex-cpp-example-master/: Makefile  a
github_demos/c-minus-master/: compiler  depends  output.dcl
github_demos/flex-bison-sql-select-query-master/: README.md  a.out  build.sh  ex1.sql  ex10.sql  ex2.sql  ex3.sql  ex5.sql  ex6.sql  ex7.sql  ex8.sql  ex9.sql  gram.y  lex.yy.c  scan.l  test.sh  y.output  y.tab.c  y.tab.h
github_demos/flex_bison_calc-master/: calculadora  calculadora.tab.c  calculadora.tab.h  lex.yy.c
github_demos/good/miniC-master/: CMakeLists.txt  Makefile  README.md  c.tab.c  c.y  lex.yy.c  test
github_demos/klang-master/: Makefile  README.md  a.klang.file  b.klang.file  klang  klang.l  klang.tab.c  klang.tab.h  klang.y  lex.yy.c
github_demos/latex2html-master/: latex2html  lex.yy.c  log.txt  turin-in-html.html  y.tab.c  y.tab.h
github_demos/myDBMS-master/: mysql  y.tab.c  y.tab.h
编译原理实验/CMM/: lex.yy.c  (+3 more)
(+209 files in other folders)
